@@ -2731,7 +2731,7 @@ graphics_info_t::rot_trans_adjustment_changed(GtkAdjustment *adj, gpointer user_
        molecules[imol_moving_atoms].Bonds_box_type() == coot::COLOUR_BY_RAINBOW_BONDS) {
       
       Bond_lines_container bonds;
-      bonds.do_Ca_bonds(*moving_atoms_asc, 1.0, 4.7);
+      bonds.do_Ca_plus_ligands_bonds(*moving_atoms_asc, 1.0, 4.7);
       regularize_object_bonds_box.clear_up();
       regularize_object_bonds_box = bonds.make_graphical_bonds();
    } else {
