@@ -99,6 +99,9 @@
   o BUG-FIX: refining with structures from .res files sometimes crash
     when writing backup file on Mac [Derek Logan].
 
+  o BUG-FIX: Rotating/translating ligands in CA+Ligands mode now works
+    [Jim Thorpe].
+
   o BUG-FIX: Platinum can now have sensible bonds to N and O [John
     Helliwell].
 
